# SENTINEL

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  PRESS.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-docker.yml  publish-npm.yml  publish-pypi.yml
compliance/: __init__.py  jurisdictions.py
compliance/audit_log/: __init__.py  export.py
compliance/coppa/: __init__.py  consent.py
compliance/dsa/: __init__.py  reporting.py
compliance/gdpr/: __init__.py  erasure.py  lawful_basis.py
compliance/retention_policies/: __init__.py  policies.py
compliance/uk_osa/: __init__.py  risk_assessment.py
dashboard/web/: .env.example  .gitignore  README.md  next-env.d.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
datasets/synthetic/: README.md
docs/: architecture.md  compliance.md
docs/adr/: 0000-template.md  0001-python-uv-toolchain.md  0002-monorepo-layout.md  0003-postgres-age-rls.md  0004-async-sqlalchemy-asyncpg.md  0005-pydantic-frozen-contracts.md  0006-structlog-opentelemetry.md  0007-audit-log-hash-chain.md  0008-fastapi-uvicorn.md  README.md
docs/compliance/: federation-governance.md
docs/sdk-docs/: README.md  api-reference-node.md  api-reference-python.md  integration-guide.md  quickstart-node.md  quickstart-python.md
infra/docker/: Dockerfile.service
infra/secrets/: README.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_row_level_security.py  0003_age_graph_setup.py  0004_age_sequence_grants.py  0005_tenant_action_config.py  0006_reasoning_table.py  0007_dashboard_user.py  0008_honeypot.py  0009_federation_tables.py  0010_synthetic_runs.py  0011_researcher_role.py  0012_bug_reports.py
scripts/: verify_model_update.py
sdk/node/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_usage.py  webhook_server.py
sdk/python/src/sentinel/: __init__.py  _retry.py  client.py  errors.py  events.py  models.py  webhooks.py
sdk/python/tests/: conftest.py  test_client.py  test_errors.py  test_failopen.py  test_models.py  test_retry.py  test_version.py  test_webhooks.py
shared/audit/: __init__.py  chain.py  events.py  hashing.py
shared/auth/: __init__.py  api_key.py  jwt.py  keys.py  passwords.py
shared/compliance/: bias_gate.py
shared/config/: __init__.py  settings.py
shared/constants/: __init__.py  scoring.py  tiers.py
shared/contracts/: __init__.py  classify.py  federation.py  graph.py  ingest.py  memory.py  patterns.py  preprocess.py  response.py  score.py  synthetic.py
shared/db/: __init__.py  base.py  event_writes.py  models.py  session.py
shared/errors/: __init__.py  exceptions.py
shared/events/: __init__.py  envelope.py  topics.py
shared/explainability/: __init__.py  context_summary.py  evidence_templates.py  next_review.py  pattern_display_names.py  primary_drivers.py  reasoning_generator.py  reasoning_repository.py
shared/federation/: __init__.py  pepper.py  publisher_repository.py  reputation.py  reputation_repository.py  signal_repository.py  signals.py  signing.py  tenant_secret_repository.py
shared/fingerprint/: __init__.py  features.py  repository.py
shared/graph/: __init__.py  cypher.py  edges.py  views.py
shared/honeypot/: __init__.py  activation.py  evidence.py  personas.py  prompt.py  repository.py  service.py
shared/llm/: __init__.py  anthropic_provider.py  factory.py  fake.py  openai_provider.py  provider.py
shared/memory/: __init__.py  repository.py
shared/observability/: __init__.py  context.py  logging.py  tracing.py
shared/patterns/: __init__.py  matches.py  protocol.py
shared/response/: __init__.py  action_defaults.py  envelope.py  mandatory_report.py  retry.py  tier_change.py
shared/schemas/: __init__.py  actor.py  audit_log.py  base.py  conversation.py  enums.py  event.py  pattern_match.py  reasoning.py  relationship_edge.py  response_action.py  suspicion_profile.py  tenant.py  tenant_action_config.py
shared/scoring/: __init__.py  aggregator.py  decay.py  deltas.py  signals.py  tier.py
shared/synthetic/: __init__.py  access.py  axes.py  dataset.py  pipeline.py  release.py  repository.py  stages.py  validation.py
shared/vector/: __init__.py  qdrant_client.py
shared/web/: __init__.py  factory.py  health.py  middleware.py
shared/webhook/: delivery.py  signing.py
tests/: _services.py
tests/integration/: _phase7b_helpers.py  conftest.py  test_actor_lookup.py  test_audit_chain.py  test_audit_events.py  test_bug_report_rls.py  test_bug_report_route.py  test_detection_accuracy.py  test_event_lookback_messages.py  test_event_writes.py  test_gdpr_erasure.py  test_ingestion_intake.py  test_ingestion_route.py  test_pattern_match_writes.py  test_pattern_matched_helper.py  test_patterns_routes.py  test_phase10_consumer_flow.py  test_phase10_dashboard_federation_toggle.py  test_phase10_dashboard_reputation_view.py  test_phase10_federation_migration.py  test_phase10_pattern_federation_match.py  test_phase10_publisher_flow.py  test_phase10_publisher_repo.py  test_phase10_qdrant_federated.py  test_phase10_reputation_degrades_delta.py  test_phase10_scoring_triggers_publish.py  test_phase10_signal_repo.py  test_phase10_three_tenant_acceptance.py  test_phase11_dataset_fetch.py  (+74 more)
(+400 files in other folders)
